# qatrackplus

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  fix_assets.py  package-lock.json  package.json  pyproject.toml  test_flatpickr.html  test_moment.js  test_moment2.js  uv-setup.md  vite.config.js
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
deploy/: activate_backup.sh
deploy/apache/: apache24_daemon.conf
deploy/docker/: .env.example
deploy/docker/django/: Dockerfile
deploy/mysql/: create_db_and_role.sql  create_ro_role.sql  generate_ro_privileges.sql  local_settings.py
deploy/nginx/: qatrack.conf
deploy/postgres/: create_db_and_role.sql  grant_ro_rights.sql  local_settings.py
deploy/sqlite/: local_settings.py
deploy/supervisor/: django-q2.conf  gunicorn.conf
deploy/win/: QATrack40CherryPyService.py  QATrackCherryPyService.py  activate_backup.ps1  backup.ps1  iis_install.ps1  install_winsw.ps1  local_settings.py  qatrack-service.xml  run_cherrypy.py
docs/: conf.py  index.rst  release_notes.rst
docs/admin/: guide.rst
docs/developer/: guide.rst
docs/install/: authentication_backends.rst  backup.rst  config.rst  install.rst  linux.rst  linux_upgrade_from_030.rst  linux_upgrade_from_3.rst  win.rst  win_upgrade_from_3.rst
docs/release_notes/: v0.2.rst  v0.3.rst  v3.1.rst
qatrack/: context_processors.py  docker_settings.py  settings.py  urls.py
qatrack/accounts/: admin.py  urls.py
qatrack/accounts/migrations/: 0001_initial.py  0005_alter_defaultgroup_options.py  0005_v4_0_final.py
qatrack/accounts/tests/: test_accounts.py  utils.py
qatrack/api/: urls.py
qatrack/api/attachments/: urls.py
qatrack/api/auth/: urls.py
qatrack/api/comments/: urls.py
qatrack/api/contenttypes/: urls.py
qatrack/api/faults/: urls.py
qatrack/api/parts/: serializers.py  urls.py  views.py
qatrack/api/qa/: urls.py
qatrack/api/service_log/: urls.py
qatrack/api/units/: urls.py
qatrack/attachments/: admin.py  apps.py  models.py
qatrack/attachments/migrations/: 0010_alter_attachment_options.py  0010_v4_0_final.py
qatrack/attachments/tests/: test_commands.py  test_models.py  test_utils.py
qatrack/contacts/migrations/: 0003_alter_contact_options.py  0003_v4_0_final.py
qatrack/faults/: admin.py  apps.py  forms.py  signals.py  urls.py  views.py
qatrack/faults/migrations/: 0015_alter_fault_options_alter_faultreviewgroup_options_and_more.py  0015_v4_0_final.py
qatrack/faults/tests/: test_forms.py  test_selenium.py  tests.py
qatrack/issue_tracker/: admin.py  forms.py  models.py  urls.py  views.py
qatrack/issue_tracker/migrations/: 0017_alter_issue_options_alter_issuepriority_options_and_more.py  0017_issue_linked_qa_service_faults.py  0017_v4_0_final.py  0018_populate_default_statuses.py
qatrack/middleware/: maintain_filters.py  profiler.py
qatrack/notifications/common/: admin.py
qatrack/notifications/faults/: admin.py
qatrack/notifications/faults_review/: admin.py
qatrack/notifications/migrations/: 0026_alter_faultnotice_options_and_more.py  0026_v4_0_final.py
qatrack/notifications/parts/: admin.py  handlers.py
qatrack/notifications/qccompleted/: admin.py
qatrack/notifications/qcreview/: admin.py
qatrack/notifications/qcscheduling/: admin.py
qatrack/notifications/service_log/: admin.py
qatrack/notifications/service_log_review/: admin.py  test_ser.py
qatrack/notifications/service_log_scheduling/: admin.py  test_sls.py
qatrack/parts/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py
qatrack/parts/migrations/: 0014_auto_20201230_0955.py  0018_alter_part_options_alter_partcategory_options_and_more.py  0018_v4_0_final.py
qatrack/parts/tests/: test_api.py  test_models.py
qatrack/qa/: admin.py  apps.py  signals.py  testpack.py  urls.py  utils.py
qatrack/qa/migrations/: 0002_029_to_030_first.py  0016_tolerance_name.py  0048_auto_20200102_1356.py  0060_alter_autoreviewrule_options_and_more.py  0060_v4_0_final.py
qatrack/qa/south_migrations/: 0001_initial.py  0014_update_day_for_tlis.py  0015_auto__add_field_test_chart_visibility.py  0016_auto__add_autoreviewrule__add_field_test_auto_review.py  0017_add_perm_can_review_own_tests.py  0018_auto__add_field_test_display_image.py  0019_multiple_choice_to_string.py  0020_auto__add_field_test_hidden.py  0021_auto__add_field_test_skip_without_comment.py  0022_ensure_no_null_testlistinstance.py  0023_auto__del_field_testinstance_in_progress__chg_field_testinstance_test_.py  0024_auto__add_field_testlistcycle_drop_down_label__add_field_testlistcycle.py  0025_auto__add_field_testlist_warning_message__add_field_testlistcycle_warn.py  0026_give_new_permission_if_can_review.py
qatrack/qa/tests/: test_admin.py  test_models.py  test_selenium.py  test_tags.py
qatrack/qa/views/: base.py  charts.py  review.py
qatrack/qatrack_core/: apps.py  checks.py  forms.py  tasks.py  urls.py  utils.py
qatrack/qatrack_core/tests/: live.py  test_backup_site.py  test_forms.py  test_zoneinfo.py
qatrack/reports/: admin.py  forms.py
qatrack/reports/migrations/: 0003_copy_report_permissions.py  0010_alter_reportnote_options_and_more.py  0010_v4_0_final.py
qatrack/reports/tests/: test_base.py
qatrack/service_log/: admin.py  apps.py  forms.py  signals.py  urls.py  views.py
qatrack/service_log/migrations/: 0021_auto_20190729_2228.py  0028_alter_grouplinker_options_and_more.py  0028_v4_0_final.py
qatrack/service_log/tests/: test_forms.py  test_models.py
qatrack/templates/: site_base.html
qatrack/units/: admin.py  tests.py  urls.py  views.py
qatrack/units/migrations/: 0021_v4_0_final.py  (+2 more)
scripts/: copy_unit.py
(+52 files in other folders)
