[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qatrack"]
include = [
    "qatrack/**/*",
    "manage.py",
    "README.md",
    "LICENSE",
]

[project]
name = "qatrackplus"
version = "4.0.0"
description = "QATrack+ is an open source application for managing QC data in radiotherapy and diagnostic imaging clinics"
readme = "README.md"
requires-python = ">=3.12, <=3.13"
license = {text = "MIT"}
authors = [
    {name = "QATrack+ contributors", email = "randy@multileaf.ca"},
]
keywords = ["QATrack+", "medical physics", "TG142", "quality assurance", "linac", "CT", "MRI", "radiotherapy", "diagnostic imaging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry", 
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: JavaScript",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Version Control :: Git",
]
package-mode = false

dependencies = [
    "Django==4.2",
    "django-q2>=1.8.0",
    "beautifulsoup4==4.9.3",
    "concurrent-log-handler==0.9.19",
    "django-auth-adfs>=1.7.0",
    "django-braces>=1.17,<1.18",
    "django-contrib-comments>=2.2,<3.0",
    "django-crispy-forms>=1.14.0,<2.0",
    "django-dynamic-raw-id>=4.0",
    "django-extensions>=3.1.0,<4.0",
    "django-filter>=23.0",
    "django-formtools>=2.5.1,<3.0",
    "django-listable>=0.9.0,<1.0",
    "django-mptt>=0.13.4,<1.0",
    "django-mptt-admin>=2.0",
    "django-picklefield>=3.1",
    "django-registration>=3.2",
    "djangorestframework>=3.14.0",
    "djangorestframework-filters>=1.0.0.dev2",
    "django-widget-tweaks>=1.5.0",
    "inflection>=0.5.0,<1.0",
    "uritemplate>=4.0.0,<5.0",
    "html5lib>=1.1,<2.0",
    "markdown>=3.4.0,<4.0",
    "matplotlib>=3.7.0,<4.0",
    "numpy>=1.21.0,<2.0",
    "openpyxl>=3.0.6,<4.0",
    "pandas>=1.3.0,<3.0",
    "Pillow>=9.0.0,<11.0",
    "pydicom>=2.1.2,<4.0",
    "pylinac>=3.20,<4.0",
    "pynliner>=0.8.0,<1.0",
    "python-dateutil>=2.8.1,<3.0",
    "reportlab>=4.0.0,<5.0",
    "requests>=2.25.0,<3.0",
    "scipy>=1.7.0,<2.0",
    "urllib3>=1.25.11,<3.0",
    "weasyprint>=65.0,<66.0",
    "xlrd>=2.0.1,<3.0",
    "XlsxWriter>=1.3.7,<4.0",
    "django-recurrence>=1.11.0",
    "django-sql-explorer>=5.3",
    "black>=23.1.0",
    "blessed>=1.20.0",  # Required for django-q2 qmonitor
    "wcwidth<0.2.13",  # Pinned due to django-q2 qmonitor bug passing int instead of str
]

[project.optional-dependencies]
mysql = [
    "mysqlclient==2.0.3",
]

mssql = [
    "mssql-django>=1.5",
    "python-ldap",
    "django-auth-ldap<4.9",
]

postgres = [
    "psycopg[binary]",
]
win = [
    "CherryPy>=18.8.0; sys_platform == 'win32'",
    "pyreadline; sys_platform == 'win32'",
    "pywin32>=300; sys_platform == 'win32'",
]

docker = [
    "gunicorn>=21.2.0",
]

translations = [
    "polib>=1.2.0",
    "googletrans==4.0.0rc1",
]

[project.urls]
Homepage = "https://qatrackplus.com"
Documentation = "https://docs.qatrackplus.com"
Repository = "https://github.com/qatrackplus/qatrackplus"

[tool.pytest.ini_options]
testpaths = ["qatrack"]
norecursedirs = [
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__",
    ".venv",
    "venv"
]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -q"
django_find_project = true
DJANGO_SETTINGS_MODULE = "qatrack.settings"

[tool.uv.sources]
python-ldap = { url = "https://github.com/cgohlke/python-ldap-build/releases/download/v3.4.5/python_ldap-3.4.5-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32' and python_version== '3.12'" }

[dependency-groups]
dev = [    
    # Testing framework and utilities
    "pytest>=7.0,<8.0",
    "pytest-django>=4.5.0,<5.0",
    "pytest-cov>=4.0,<5.0",
    "pytest-sugar>=0.9.6,<1.0",
    "coverage>=6.0,<8.0",
    "django-coverage>=1.2.4,<2.0",
    "freezegun>=1.0.0,<3.0",
    "selenium>=4.0.0,<5.0",
    "PyVirtualDisplay==2.0",
    "django-debug-toolbar>=4.0,<5.0",
    "django-upgrade>=1.25.0",
    "pre-commit>=4.2.0",
    "fabric>=2.6.0",
    "ipdb",
    "ipython",
    "ruff",
    
    # Documentation
    "Jinja2==3.1.2",
    "Sphinx==7.4.7",
    "sphinx-autobuild>=1.0.0",
    "sphinx-rtd-theme==3.0.2",
    "sphinxcontrib-applehelp==1.0.4",
    "sphinxcontrib-devhelp==1.0.2",
    "sphinxcontrib-htmlhelp==2.0.1",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.3",
    "sphinxcontrib-websupport==1.2.4",
]

[tool.ruff]
line-length = 120
target-version = "py312"

exclude = [
    ".git",
    "fixtures",
    "migration_data",
    "migrations",
    "south_migrations",
    "node_modules",
    "media",
    "static",
    "*tmp*"
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "DJ"]
ignore = [
    "E501",  # line-too-long
    "E741",  # ambiguous-variable-name
    "DJ001", # Avoid using `null=True` on string-based fields such as `CharField`
    "DJ006", # Use `queryset.filter(...)` instead of `queryset.exclude(...)`
    "DJ007", # Save method should come before custom method
    "DJ008", # Model name should be singular
    "UP031", # Use format specifiers instead of percent format
]

[tool.ruff.format]
quote-style = "single"
